--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>1.9.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-security-cors</artifactId>
+            <version>3.0.2</version>
+        </dependency>
 
         <!-- log sl4j with log4j-->
         <dependency>
